edit update and destroy actions and view file

--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -1,1 +1,11 @@
-<h1> Instagram </h1>
+<h1>Instagram posts</h1>
+<ul>
+   <% @pics.each do |pic|%>
+      <li>
+        <%= link_to  pic.title , pic %>
+      </li>
+   <% end %>
+</ul>
+
+
+<%= link_to "New Post", new_pic_path %>
