--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,33 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <%= javascript_importmap_tags %>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   </head>
 
   <body>
-     <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+     <%= render "layouts/header"%>
+     <% if notice %>
+       <div class="alert alert-info alert-dismissible fade show m-1  text-center" role="alert">
+          <%= notice %>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+     <% end %>
+
+    <% if alert %>
+    <div class="alert alert-warning alert-dismissible fade show m-1  text-center" role="alert">
+      <%= alert %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+       </button>
+    </div>
+    <% end %>
+
     <%= yield %>
+    <%= render "layouts/footer"  %>
   </body>
 </html>
