--- a/app/views/pics/_form.html.erb
+++ b/app/views/pics/_form.html.erb
@@ -1,16 +1,30 @@
-<%= form_with model: @pic do |form| %>
-  <div>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
-  
-  </div>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card mt-5">
+        <div class="card-body">
+          <%= form_with model: @pic do |form| %>  
+            <div class="mb-3">
+              <%= form.label :title, class: "form-label" %>
+              <%= form.text_field :title, class: "form-control", placeholder: "Enter title" %>
+            </div>
+            
+            <div class="mb-3">
+              <%= form.label :description, class: "form-label" %>
+              <%= form.text_area :description, class: "form-control", placeholder: "Enter description" %>
+            </div>
 
-  <div>
-    <%= form.label :description %><br>
-    <%= form.text_area :description %><br>
+             <div class="mb-3">
+               <%= form.label :image %><br>
+               <%= form.file_field :image %>
+            </div>
+            
+            <div class="text-center">
+              <%= form.submit "Post", class: "btn btn-primary btn-lg" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
