--- a/app/views/pics/new.html.erb
+++ b/app/views/pics/new.html.erb
@@ -1,3 +1,36 @@
-<h1>New Post</h1>
+<h1 class= "row justify-content-center">New post</h1>
 
-<%= render "form" , article: @article %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card mt-5">
+        <div class="card-body">
+          <%= form_with model: @pic do |form| %>  
+            <div class="mb-3">
+              <%= form.label :title, class: "form-label" %>
+              <%= form.text_field :title, class: "form-control", placeholder: "Enter title" %>
+            </div>
+            
+            <div class="mb-3">
+              <%= form.label :description, class: "form-label" %>
+              <%= form.text_area :description, class: "form-control", placeholder: "Enter description" %>
+            </div>
+
+            <div class="mb-3">
+               <%= form.label :image %><br>
+               <%= form.file_field :image %>
+            </div>
+            
+            <div class="text-center">
+              <%= form.submit "Create Post", class: "btn btn-primary btn-lg" %>
+             <%= link_to "Back", root_path, class: "btn btn-secondary btn-lg ml-2" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<% render "form" , article: @article %>
+
